<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

<TextView
    android:id="@+id/forgotPasswordTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/forgot_password_title"
    android:textColor="@color/yellow"
    android:textSize="18sp"
    android:textStyle="bold"
    android:layout_marginBottom="8dp"/>

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    android:textColorHint="#FFFFFF"
    app:boxStrokeColor="@color/yellow"
    app:hintTextColor="@color/yellow">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/forgotPasswordEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

</com.google.android.material.textfield.TextInputLayout>

<Button
    android:id="@+id/resetPasswordButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:backgroundTint="@color/yellow"
    android:text="@string/reset_password" />

</LinearLayout>